Enable configuration of the add-in directory through the json config to allow foundry to configure.